# christ-cli

./: Cargo.toml  README.md
.github/workflows/: release.yml
npm/: install.js  package.json
src/: app.rs  cli.rs  main.rs
src/api/: bolls.rs  mod.rs  types.rs
src/data/: books.rs  kjv.rs  reference.rs
src/store/: cache.rs  state.rs
src/ui/: banner.rs  browser.rs  theme.rs  verse_card.rs
